# TBD-2023

./: Actions.cpp  Actions.h  CMakeLists.txt  README.md  main.cpp  notepad.txt  r_star_tree.cpp  r_star_tree.h  r_star_tree.hpp
output/: Amazing.osm  BlockedMap.osm
